fix: :art: Align the icons.

--- a/src/scss/06-components/_Navbar.scss
+++ b/src/scss/06-components/_Navbar.scss
@@ -14,6 +14,7 @@ body{
         width: 100%;
         height: 4rem;
         @include flex($justify: space-evenly, $wrap: nowrap);
+        padding: 1rem 0 0 0;
     }
 
     &-item{
